fix table title not showing 100% #1675

--- a/theming/scss/components/_cards.scss
+++ b/theming/scss/components/_cards.scss
@@ -154,11 +154,6 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: normal;
-        max-height: calc(2 * 21px);
-
-        @include media-breakpoint-up(xxl) {
-            max-width: 25rem;
-        }
 
         a {
             @extend .text-decoration-none;
